Updates to README file

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-# Adding an contributor collection.
+# Adding a contributor collection.
 collections:
   people:
     output: true
