I made some changes.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: The Name of Your Project Goes Here
 
 # Short bio or description (displayed in the header)
-description: This is where you describe your project in a sentence.
+description: This is the repository for the final projects of HUM 331.
 
 # URL of an image you'd like to appear in your header.
 # It should be long and rectangular to feature as a banner image.
