Updated digital tools assignments

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: A History of Words
 
 # Short bio or description (displayed in the header)
-description: HUM 331 Course Materials, Spring 2021
+description: HUM 331/HIS 336, Princeton University, Spring 2021
 
 # URL of an image you'd like to appear in your header.
 # It should be long and rectangular to feature as a banner image.
